# CH32V203

./: Compiler Explorer Code.cpp  git-pull-latest.sh  git-push-all.sh
MakeTests/: Makefile
MakeTests/libs/bare/: makefile.mk
MakeTests/libs/pinled/: makefile.mk
MakeTests/libs/registers/: makefile.mk
baremetalCh32/: Makefile
baremetalCh32/firmware/: baremetal.asm  baremetal.elf  baremetal.hex  baremetal.lst  baremetal.map
baremetalCh32/libs/bare/: bare.cppm  makefile.mk
baremetalCh32/libs/bare/src/: bare.cppm  bare.traits.cppm
baremetalCh32/libs/pinled/: makefile.mk
baremetalCh32/libs/registers/: bitview.cppm  makefile.mk
baremetalCh32/libs/registers/src/: bitview.cppm
baremetalCh32/libs/system/: makefile.mk
baremetalCh32/libs/system/src/: system.cxx
baremetalCh32/src/: main.c  main.cxx  makefile.mk
baremetalCh32/startup/: makefile.mk  startup_ch32v203.c
baremetalCh32_v2/: .config  .config.old  Kconfig
baremetalCh32_v2/libs/bar/: Kconfig
baremetalCh32_v2/libs/bare/: Kconfig
baremetalCh32_v2/libs/foo/: Kconfig
baremetal_origin/src/: main.c
baremetal_step1/: makefile
baremetal_step1/gcm.cache/: add.gcm
baremetal_step1/src/: add.cxxm  main.cxx
baremetal_step1/startup/: startup_ch32v203.c
baremetal_step2/: Makefile  Makefile.old  app_failback.mk  libs_failback.mk  makefile
baremetal_step2/gcm.cache/: add.gcm  bare-traits.gcm  barestd-traits.gcm  barestd.gcm  bitfield.gcm  pinled.gcm  registers.gcm  z.gcm
baremetal_step2/hw/: makefile.mk
baremetal_step2/libs/bare/: bare-traits.cppm
baremetal_step2/libs/barestd/: barestd-traits.cppm  barestd.cppm
baremetal_step2/libs/registers/: bitview.cppm
baremetal_step2/libs/system/: system.cxx  system.h
baremetal_step2/libs/z/: z.cxxm
baremetal_step2/src/: gpio.h  main.c  main.cxx  makefile.mk  system.h
baremetal_step2/startup/: makefile.mk  startup_ch32v203.h
baremetal_step3/: CMakeLists.txt  get_toolchain.sh
baremetal_step3/cmake/: toolchain.cmake
baremetal_step3/gcm.cache/: add.gcm  bare-traits.gcm  bare.gcm  pinled.gcm
baremetal_step3/hw/: makefile.mk
baremetal_step3/libs/bare/: CMakeLists.txt  bare-traits.cppm
baremetal_step3/libs/pinled/: CMakeLists.txt  pinled.cppm
baremetal_step3/libs/registers/: CMakeLists.txt
baremetal_step3/libs/system/: CMakeLists.txt
baremetal_step3/src/: main.c
baremetal_step4/: Makefile  dummy.mk
baremetal_step4/gcm.cache/: add.gcm  bare.gcm  barestd.gcm  registers.gcm  traits.gcm  z.gcm
baremetal_step4/libs/bare/: bare.cppm
baremetal_step4/libs/pinled/: pinled.cppm
baremetal_step4/src/: makefile.mk
baremetal_step4/startup/: makefile.mk
baremetal_xpack_1/: LICENSE  package.json  usbipd_program.sh  xpack_init.sh
baremetal_xpack_1/src/: main.c
baremetal_xpack_1/xpacks/@xpack-dev-tools/: riscv-none-elf-gcc
modules_bitfield_step1/: app  app.asm  app_nomodules  app_nomodules.cpp  bitfield.cppm  build.sh  main.cpp  reg.cppm
modules_bitfield_step1/gcm.cache/: bitfield.gcm  math.gcm  reg.gcm
modules_sandbox/: app  bitfield.cppm  build.sh  main.cpp  math.cppm  reg.cppm
modules_sandbox/gcm.cache/: bitfield.gcm  math.gcm  reg.gcm
